# colorgrade

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
scripts/: clean-all  run-all  run-black
src/colorgrade/: __init__.py
tests/: test_color_scaler.py
tests/features/: colorgrade.feature
tests/features/steps/: steps.py
