[flake8]
max-line-length=120
# I201 Missing newline between import groups
# E203 whitespace before ':'
# E231 missing whitespace after ','
ignore=I201,E203,E231


[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[behave_test]
args=tests/features
format=pretty
